--- a/biblioteca/src/main/resources/application.properties
+++ b/biblioteca/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+
